--- a/app/src/main/res/menu/activity_petunjuk_penggunaan_drawer.xml
+++ b/app/src/main/res/menu/activity_petunjuk_penggunaan_drawer.xml
@@ -5,6 +5,11 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_Home"
+            android:icon="@drawable/ic_home"
+            android:title="Home" />
+
+        <item
             android:id="@+id/nav_lapor"
             android:icon="@drawable/ic_lapor"
             android:title="Lapor" />
@@ -12,10 +17,6 @@
             android:id="@+id/nav_nomortelepondarurat"
             android:icon="@drawable/ic_nomortelepondarurat"
             android:title="No. Telepon Darurat" />
-        <item
-            android:id="@+id/nav_petunjukpenggunaan"
-            android:icon="@drawable/ic_petunjukpenggunaan"
-            android:title="Petunjuk Penggunaan" />
         <item
             android:id="@+id/nav_feedback"
             android:icon="@drawable/ic_feedback"
