--- a/app/src/main/res/menu/activity_feedback_drawer.xml
+++ b/app/src/main/res/menu/activity_feedback_drawer.xml
@@ -5,6 +5,11 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_Home"
+            android:icon="@drawable/ic_home"
+            android:title="Home" />
+
+        <item
             android:id="@+id/nav_lapor"
             android:icon="@drawable/ic_lapor"
             android:title="Lapor" />
@@ -16,10 +21,6 @@
             android:id="@+id/nav_petunjukpenggunaan"
             android:icon="@drawable/ic_petunjukpenggunaan"
             android:title="Petunjuk Penggunaan" />
-        <item
-            android:id="@+id/nav_feedback"
-            android:icon="@drawable/ic_feedback"
-            android:title="Feedback" />
         <item
             android:id="@+id/nav_aboutus"
             android:icon="@drawable/ic_aboutus"
