--- a/app/src/main/res/menu/activity_lapor_drawer.xml
+++ b/app/src/main/res/menu/activity_lapor_drawer.xml
@@ -5,9 +5,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_lapor"
-            android:icon="@drawable/ic_lapor"
-            android:title="Lapor" />
+            android:id="@+id/nav_Home"
+            android:icon="@drawable/ic_home"
+            android:title="Home" />
         <item
             android:id="@+id/nav_nomortelepondarurat"
             android:icon="@drawable/ic_nomortelepondarurat"
