--- a/app/src/main/res/menu/activity_lapor_drawer.xml
+++ b/app/src/main/res/menu/activity_lapor_drawer.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/ic_home"
             android:title="Home" />
         <item
+            android:id="@+id/nav_statuslaporan"
+            android:icon="@drawable/ic_status_laporan"
+            android:title="Status Laporan" />
+        <item
             android:id="@+id/nav_nomortelepondarurat"
             android:icon="@drawable/ic_nomortelepondarurat"
             android:title="No. Telepon Darurat" />
