--- a/app/src/main/res/layout/activity_lapor.xml
+++ b/app/src/main/res/layout/activity_lapor.xml
@@ -4,20 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Lapor">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".Lapor"
+    tools:showIn="@layout/app_bar_lapor">
 
     <TextView
-    android:id="@+id/txt_kategori"
-    android:layout_width="wrap_content"
-    android:layout_height="21dp"
-    android:layout_marginStart="20dp"
-    android:layout_marginLeft="20dp"
-    android:layout_marginTop="24dp"
-    android:text="Kategori"
-    android:textColor="@android:color/black"
-    android:textSize="14sp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/txt_kategori"
+        android:layout_width="wrap_content"
+        android:layout_height="21dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="24dp"
+        android:text="Kategori"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/edtKategori"
@@ -41,15 +43,17 @@
         android:id="@+id/txt_tanggal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="28dp"
         android:text="Tanggal"
         android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
-        tools:layout_editor_absoluteX="23dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/PilihGambar" />
 
 
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/Img"
         android:layout_width="400dp"
         android:layout_height="293dp"
         android:layout_marginStart="8dp"
@@ -60,7 +64,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtKategori" />
+        app:layout_constraintTop_toBottomOf="@+id/edtKategori"
+        app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
         android:id="@+id/textView3"
@@ -75,20 +80,20 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_tanggal" />
 
     <Button
-        android:id="@+id/btnAdd"
+        android:id="@+id/PilihGambar"
         android:layout_width="0dp"
-        android:layout_height="39dp"
+        android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="@color/colorPrimary"
         android:text="Pilih Gambar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image"
-        android:onClick="btnAdd"/>
+        app:layout_constraintTop_toBottomOf="@+id/Img" />"/>
 
     <EditText
         android:id="@+id/edtTanggal"
@@ -100,12 +105,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:ems="10"
+        android:hint="(DD-MM-YYYY)"
         android:inputType="date"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/txt_tanggal"
-        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />
+        app:layout_constraintTop_toBottomOf="@+id/PilihGambar" />
 
     <EditText
         android:id="@+id/edtDesk"
@@ -118,27 +124,32 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
+        android:hint="(Isi dengan deskripsi singkat)"
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/btnLapor"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/Upload"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/edtTanggal" />
+        app:layout_constraintTop_toBottomOf="@+id/edtTanggal"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/btnLapor"
-        android:layout_width="328dp"
+        android:id="@+id/Upload"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="72dp"
+        android:background="@color/colorPrimary"
         android:text="LAPOR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.641"
-        app:layout_constraintStart_toStartOf="parent"
-        android:onClick="btnTambah"/>
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 
 </android.support.constraint.ConstraintLayout>
