--- a/app/src/main/res/layout/content_feedback.xml
+++ b/app/src/main/res/layout/content_feedback.xml
@@ -7,7 +7,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Feedback"
     tools:showIn="@layout/app_bar_feedback">
-//
+//penambahan pada feedback
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
