--- a/app/src/main/res/layout/content_feedback.xml
+++ b/app/src/main/res/layout/content_feedback.xml
@@ -107,7 +107,7 @@
         android:layout_marginLeft="13dp"
         android:layout_marginTop="9dp"
         android:ems="10"
-        android:hint="Masukan Kritik atau Saran "
+        android:hint="Masukan Kritik atau Saran Anda"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
