--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/load"
         android:layout_width="0dp"
         android:layout_height="45dp"
-        android:onClick="loadMenu"
+        android:onClick="load"
         android:text="Load menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,8 +48,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/rvMain"
+        app:layout_constraintTop_toTopOf="@+id/rvMain"/>
 
-        <ImageView/>
+
 
 </android.support.constraint.ConstraintLayout>
