--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+
+    <color name="colorPrimary">#3F51B5</color>
+
+    <color name="colorAccent">#FF4081</color>
+    <color name="bg_splash">#0d1984</color>
+    <color name="splash_title">#faf31c</color>
 </resources>
